--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -70,3 +70,9 @@ $header-toggle-color: #ffffff;
     }
   }
 }
+
+.bi-app--iframe {
+  .bi-header {
+    display: none;
+  }
+}
