--- a/client/src/components/sidebar/sidebar.scss
+++ b/client/src/components/sidebar/sidebar.scss
@@ -191,3 +191,9 @@ $sidebar-btn-toggle-icon-color: #ffffff;
     }
   }
 }
+
+.bi-app--iframe {
+  .bi-sidebar {
+    display: none;
+  }
+}
