--- a/client/src/pages/chart/chart.scss
+++ b/client/src/pages/chart/chart.scss
@@ -65,7 +65,7 @@ $chart-subtitle-color: #828795;
 
 .bi-chart--iframe {
   position: fixed;
-  z-index: 10001;
+  z-index: 10010;
   top: 0;
   right: 0;
   bottom: 0;
